--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
+    "name": "client",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "license": "MIT",
+    "scripts": {
+      "dev": "vite",
+      "build": "vite build",
+      "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+      "preview": "vite preview"
+    },
   "dependencies": {
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0"
