--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "http-proxy-middleware": "^2.0.6",
+    "node": "^20.5.0",
     "react": "^18.2.0",
     "vite": "^4.4.9"
   }
