--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "node": "^20.5.0",
     "postcss": "^8.4.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
